--- a/index.ipynb
+++ b/index.ipynb
@@ -1147,9 +1147,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires', 'Toronto', 'Marakesh']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "text_values\n",
