--- a/index.ipynb
+++ b/index.ipynb
@@ -1147,14 +1147,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'bar',\n",
+       " 'x': ['Buenos Aires', 'Toronto', 'Marakesh'],\n",
+       " 'y': [2891, 2732, 929],\n",
+       " 'text': ['Buenos Aires', 'Toronto', 'Marakesh']}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "text_values\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}\n",
-    "bar"
+    "bar_trace_first_three_pops"
    ]
   },
   {
