--- a/index.ipynb
+++ b/index.ipynb
@@ -2090,7 +2090,7 @@
    "source": [
     "area_values = None\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [x_values], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [], 'text': []}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': []}"
    ]
   },
   {
