--- a/index.ipynb
+++ b/index.ipynb
@@ -2089,7 +2089,7 @@
    "outputs": [],
    "source": [
     "area_values = None\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': []}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [b_values], 'y': [c_values], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': []}"
    ]
   },
