--- a/index.ipynb
+++ b/index.ipynb
@@ -2088,7 +2088,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_values = \n",
+    "area_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [b_values], 'y': [c_values], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': []}"
    ]
