--- a/index.ipynb
+++ b/index.ipynb
@@ -2101,8 +2101,8 @@
    ],
    "source": [
     "area_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [area_values], 'text': 'Area]}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': [Population]}"
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [area_values], 'text': 'Area'}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': 'Population'}"
    ]
   },
   {
