--- a/index.ipynb
+++ b/index.ipynb
@@ -2084,13 +2084,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[203, 630, 230]\n"
+     ]
+    }
+   ],
    "source": [
     "area_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [area_values], 'text': 'Area'}\n",
-    "print\n",
+    "print(area_values)\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': 'Population'}"
    ]
   },
