--- a/index.ipynb
+++ b/index.ipynb
@@ -2084,21 +2084,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[203, 630, 230]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'type': 'bar',\n",
+       " 'x': [['Buenos Aires', 'Toronto', 'Marakesh']],\n",
+       " 'y': [[203, 630, 230]],\n",
+       " 'text': 'Area'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "area_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [area_values], 'text': 'Area'}\n",
-    "bar_trace)\n",
+    "bar_trace_first_three_areas\n",
     "#bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': 'Population'}"
    ]
   },
