--- a/index.ipynb
+++ b/index.ipynb
@@ -2084,7 +2084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2093,17 +2093,17 @@
        "{'type': 'bar',\n",
        " 'x': ['Buenos Aires', 'Toronto', 'Marakesh'],\n",
        " 'y': [203, 630, 230],\n",
-       " 'text': 'Area'}"
+       " 'text': ['Buenos Aires', 'Toronto', 'Marakesh']}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "area_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': area_values, 'text': text_values'}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': area_values, 'text': text_values}\n",
     "bar_trace_first_three_areas\n",
     "#bar_trace_first_three_pops = {'type': 'bar', 'x': [x_values], 'y': [y_values], 'text': 'Population'}"
    ]
