--- a/index.ipynb
+++ b/index.ipynb
@@ -2084,23 +2084,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'type': 'bar', 'x': [['Buenos Aires', 'Toronto', 'Marakesh']], 'y': [[2891, 2732, 929]], 'text': 'Population'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "area_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': area_values, 'text': text_values}\n",
     "bar_trace_first_three_areas\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': 'text_values'}\n",
-    "print(bar_trace_first_three_pops)"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
   {
